@@ -11,10 +11,12 @@ BUGS FIXED:
 MINOR:
   * pitch_app(): an option to turn off automatic updating of the optimal pitch contour to speed up the processing of long audio files
   * pitch_app(): easy-to-access frequency zoom (+/- or icons)
-  * pitch_app(): hotkeys for navigation between files in the queue (enter/backspace)
+  * pitch_app(): added hotkeys for most buttons
+  * pitch_app(): pitch prior plotted on the spectrogram
   * schwa() accepts missing values in formant frequencies
   * spectrogramFolder(), modulationSpectrumFolder(), analyzeFolder(), segmentFolder(): updated html output
   * estimateVTL() regresses multiple frequency measurements of the same formant without pre-aggregating
+
 
           CHANGES IN SOUNDGEN VERSION 1.6.2 [06-February-2020]
 BUGS FIXED:
